[workspace]
resolver = "2"
members = [
    "crates/oximedia-core",
    "crates/oximedia-io",
    "crates/oximedia-codec",
    "crates/oximedia-container",
    "crates/oximedia-audio",
    "crates/oximedia-audio-analysis",
    "crates/oximedia-audiopost",
    "crates/oximedia-effects",
    "crates/oximedia-vfx",
    "crates/oximedia-graph",
    "crates/oximedia-cv",
    "crates/oximedia-net",
    "crates/oximedia-ndi",
    "crates/oximedia-accel",
    "crates/oximedia-edit",
    "crates/oximedia-gpu",
    "crates/oximedia-subtitle",
    "crates/oximedia-captions",
    "crates/oximedia-packager",
    "crates/oximedia-jobs",
    "crates/oximedia-server",
    "crates/oximedia-qc",
    "crates/oximedia-auto",
    "crates/oximedia-py",
    "crates/oximedia-drm",
    "crates/oximedia-dedup",
    "crates/oximedia-archive",
    "crates/oximedia-archive-pro",
    "crates/oximedia-timecode",
    "crates/oximedia-timeline",
    "crates/oximedia-timesync",
    "crates/oximedia-distributed",
    "crates/oximedia-farm",
    "crates/oximedia-storage",
    "crates/oximedia-collab",
    "crates/oximedia-simd",
    "crates/oximedia-mam",
    "crates/oximedia-forensics",
    "crates/oximedia-playout",
    "crates/oximedia-scopes",
    "crates/oximedia-imf",
    "crates/oximedia-dolbyvision",
    "crates/oximedia-bitstream",
    "crates/oximedia-mixer",
    "crates/oximedia-aaf",
    "crates/oximedia-image",
    "crates/oximedia-metering",
    "crates/oximedia-monitor",
    "crates/oximedia-normalize",
    "crates/oximedia-restore",
    "crates/oximedia-mir",
    "crates/oximedia-edl",
    "crates/oximedia-align",
    "crates/oximedia-routing",
    "crates/oximedia-bench",
    "crates/oximedia-metadata",
    "crates/oximedia-watermark",
    "crates/oximedia-lut",
    "crates/oximedia-analysis",
    "crates/oximedia-quality",
    "crates/oximedia-switcher",
    "crates/oximedia-transcode",
    "crates/oximedia-denoise",
    "crates/oximedia-multicam",
    "crates/oximedia-stabilize",
    "crates/oximedia-optimize",
    "crates/oximedia-scene",
    "crates/oximedia-calibrate",
    "crates/oximedia-search",
    "crates/oximedia-proxy",
    "crates/oximedia-playlist",
    "crates/oximedia-clips",
    "crates/oximedia-presets",
    "crates/oximedia-automation",
    "crates/oximedia-shots",
    "crates/oximedia-access",
    "crates/oximedia-convert",
    "crates/oximedia-rights",
    "crates/oximedia-gaming",
    "crates/oximedia-virtual",
    "crates/oximedia-profiler",
    "crates/oximedia-recommend",
    "crates/oximedia-repair",
    "crates/oximedia-review",
    "crates/oximedia-scaling",
    "crates/oximedia-workflow",
    "crates/oximedia-graphics",
    "crates/oximedia-cloud",
    "crates/oximedia-conform",
    "crates/oximedia-videoip",
    "crates/oximedia-video",
    "crates/oximedia-colormgmt",
    "crates/oximedia-batch",
    "crates/oximedia-renderfarm",
    "crates/oximedia-neural",
    "crates/oximedia-360",
    "crates/oximedia-analytics",
    "crates/oximedia-caption-gen",
    "crates/oximedia-ml",
    "oximedia",
    "oximedia-cli",
    "crates/oximedia-compat-ffmpeg",
    "crates/oximedia-compat-cv2",
    "crates/oximedia-plugin",
    "crates/oximedia-stream",
    "crates/oximedia-hdr",
    "crates/oximedia-spatial",
    "crates/oximedia-cache",
    "crates/oximedia-cdn",
    "crates/oximedia-pipeline",
    "crates/oximedia-image-transform",
    "oximedia-wasm",
    "benches",
]
exclude = ["fuzz"]

# The Python extension crate (`oximedia-py`) produces a cdylib whose linker
# output names (`oximedia.dll`, `oximedia.pdb`, `liboximedia.rlib`) collide
# with the `oximedia-cli` binary and the `oximedia` umbrella crate. PyO3
# requires the cdylib filename match the `#[pymodule] fn oximedia` symbol, so
# the crate cannot be renamed; instead it is built explicitly via maturin
# (`maturin build -m crates/oximedia-py/Cargo.toml`) or `cargo build -p
# oximedia-py`. Excluding it from `default-members` keeps plain `cargo build`
# from racing three crates onto the same output filenames.
default-members = [
    "crates/oximedia-core",
    "crates/oximedia-io",
    "crates/oximedia-codec",
    "crates/oximedia-container",
    "crates/oximedia-audio",
    "crates/oximedia-audio-analysis",
    "crates/oximedia-audiopost",
    "crates/oximedia-effects",
    "crates/oximedia-vfx",
    "crates/oximedia-graph",
    "crates/oximedia-cv",
    "crates/oximedia-net",
    "crates/oximedia-ndi",
    "crates/oximedia-accel",
    "crates/oximedia-edit",
    "crates/oximedia-gpu",
    "crates/oximedia-subtitle",
    "crates/oximedia-captions",
    "crates/oximedia-packager",
    "crates/oximedia-jobs",
    "crates/oximedia-server",
    "crates/oximedia-qc",
    "crates/oximedia-auto",
    "crates/oximedia-drm",
    "crates/oximedia-dedup",
    "crates/oximedia-archive",
    "crates/oximedia-archive-pro",
    "crates/oximedia-timecode",
    "crates/oximedia-timeline",
    "crates/oximedia-timesync",
    "crates/oximedia-distributed",
    "crates/oximedia-farm",
    "crates/oximedia-storage",
    "crates/oximedia-collab",
    "crates/oximedia-simd",
    "crates/oximedia-mam",
    "crates/oximedia-forensics",
    "crates/oximedia-playout",
    "crates/oximedia-scopes",
    "crates/oximedia-imf",
    "crates/oximedia-dolbyvision",
    "crates/oximedia-bitstream",
    "crates/oximedia-mixer",
    "crates/oximedia-aaf",
    "crates/oximedia-image",
    "crates/oximedia-metering",
    "crates/oximedia-monitor",
    "crates/oximedia-normalize",
    "crates/oximedia-restore",
    "crates/oximedia-mir",
    "crates/oximedia-edl",
    "crates/oximedia-align",
    "crates/oximedia-routing",
    "crates/oximedia-bench",
    "crates/oximedia-metadata",
    "crates/oximedia-watermark",
    "crates/oximedia-lut",
    "crates/oximedia-analysis",
    "crates/oximedia-quality",
    "crates/oximedia-switcher",
    "crates/oximedia-transcode",
    "crates/oximedia-denoise",
    "crates/oximedia-multicam",
    "crates/oximedia-stabilize",
    "crates/oximedia-optimize",
    "crates/oximedia-scene",
    "crates/oximedia-calibrate",
    "crates/oximedia-search",
    "crates/oximedia-proxy",
    "crates/oximedia-playlist",
    "crates/oximedia-clips",
    "crates/oximedia-presets",
    "crates/oximedia-automation",
    "crates/oximedia-shots",
    "crates/oximedia-access",
    "crates/oximedia-convert",
    "crates/oximedia-rights",
    "crates/oximedia-gaming",
    "crates/oximedia-virtual",
    "crates/oximedia-profiler",
    "crates/oximedia-recommend",
    "crates/oximedia-repair",
    "crates/oximedia-review",
    "crates/oximedia-scaling",
    "crates/oximedia-workflow",
    "crates/oximedia-graphics",
    "crates/oximedia-cloud",
    "crates/oximedia-conform",
    "crates/oximedia-videoip",
    "crates/oximedia-video",
    "crates/oximedia-colormgmt",
    "crates/oximedia-batch",
    "crates/oximedia-renderfarm",
    "crates/oximedia-neural",
    "crates/oximedia-360",
    "crates/oximedia-analytics",
    "crates/oximedia-caption-gen",
    "crates/oximedia-ml",
    "oximedia",
    "oximedia-cli",
    "crates/oximedia-compat-ffmpeg",
    "crates/oximedia-plugin",
    "crates/oximedia-stream",
    "crates/oximedia-hdr",
    "crates/oximedia-spatial",
    "crates/oximedia-cache",
    "crates/oximedia-cdn",
    "crates/oximedia-pipeline",
    "crates/oximedia-image-transform",
    "oximedia-wasm",
    "benches",
]

[workspace.package]
version = "0.1.7"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"
authors = ["COOLJAPAN OU (Team Kitasan)"]
repository = "https://github.com/cool-japan/oximedia"
homepage = "https://github.com/cool-japan/oximedia"
documentation = "https://docs.rs/oximedia"
description = "Sovereign Media Framework — patent-free, memory-safe multimedia processing in pure Rust"
keywords = ["multimedia", "video", "audio", "codec", "media"]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "allow"
unused_must_use = "allow"
missing_debug_implementations = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -1 }

# ── Documentation lints ──────────────────────────────────────────────────────
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
doc_link_with_quotes = "allow"
doc_overindented_list_items = "allow"
ignore_without_reason = "allow"
ignored_unit_patterns = "allow"

# ── Must-use / return value lints ────────────────────────────────────────────
must_use_candidate = "allow"
return_self_not_must_use = "allow"
unnecessary_wraps = "allow"

# ── Float comparison ─────────────────────────────────────────────────────────
float_cmp = "allow"
float_cmp_const = "allow"
approx_constant = "allow"

# ── Casting lints (intentional precision tradeoffs in media processing) ───────
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
unnecessary_cast = "allow"

# ── Naming / style pedantic ──────────────────────────────────────────────────
similar_names = "allow"
unreadable_literal = "allow"
many_single_char_names = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
items_after_statements = "allow"
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
module_name_repetitions = "allow"
struct_field_names = "allow"
type_complexity = "allow"
implicit_hasher = "allow"
comparison_chain = "allow"
if_not_else = "allow"
needless_continue = "allow"
single_match_else = "allow"
large_enum_variant = "allow"
large_futures = "allow"
borrowed_box = "allow"

# ── String / format style ────────────────────────────────────────────────────
format_push_string = "allow"
uninlined_format_args = "allow"
format_collect = "allow"

# ── Method / function style ──────────────────────────────────────────────────
unused_self = "allow"
unused_async = "allow"
match_same_arms = "allow"
redundant_closure_for_method_calls = "allow"
redundant_closure = "allow"
field_reassign_with_default = "allow"
manual_range_contains = "allow"
no_effect_underscore_binding = "allow"
manual_div_ceil = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
manual_clamp = "allow"
assigning_clones = "allow"
should_implement_trait = "allow"
derivable_impls = "allow"
only_used_in_recursion = "allow"
or_fun_call = "allow"
unwrap_or_default = "allow"
manual_strip = "allow"
manual_abs_diff = "allow"
manual_midpoint = "allow"
manual_is_multiple_of = "allow"

# ── Import / wildcard style ───────────────────────────────────────────────────
wildcard_imports = "allow"
ptr_arg = "allow"
redundant_field_names = "allow"
redundant_slicing = "allow"

# ── Iterator / collection style ───────────────────────────────────────────────
useless_vec = "allow"
needless_range_loop = "allow"
explicit_iter_loop = "allow"
cloned_instead_of_copied = "allow"
iter_without_into_iter = "allow"
double_ended_iterator_last = "allow"
single_char_pattern = "allow"
len_zero = "allow"
unnested_or_patterns = "allow"

# ── Pattern / binding style ───────────────────────────────────────────────────
used_underscore_binding = "allow"
bool_to_int_with_if = "allow"
bool_assert_comparison = "allow"
match_wildcard_for_single_variants = "allow"

# ── Unnecessary operations ────────────────────────────────────────────────────
unnecessary_sort_by = "allow"
unnecessary_join = "allow"
unnecessary_map_or = "allow"
unnecessary_literal_bound = "allow"

# ── Miscellaneous style ───────────────────────────────────────────────────────
case_sensitive_file_extension_comparisons = "allow"
default_trait_access = "allow"
needless_raw_string_hashes = "allow"
legacy_numeric_constants = "allow"
string_lit_as_bytes = "allow"
ip_constant = "allow"
if_same_then_else = "allow"
await_holding_lock = "allow"
unchecked_time_subtraction = "allow"
upper_case_acronyms = "allow"
enum_variant_names = "allow"
missing_docs_in_private_items = "allow"
# Vec init patterns
vec_init_then_push = "allow"
# Operation with no effect - intentional
no_effect = "allow"
# MSRV-gated lints
incompatible_msrv = "allow"
# Lifetimes
needless_lifetimes = "allow"
useless_format = "allow"
# Default struct construction
default_constructed_unit_structs = "allow"
# Must use on already must-use type
double_must_use = "allow"
# For-each vs loops
needless_for_each = "allow"
# while let loop
while_let_loop = "allow"
# Items after test module
items_after_test_module = "allow"
# Collapsed if
collapsible_if = "allow"
# Return binding
let_and_return = "allow"
# Redundant else
redundant_else = "allow"
# Copy types to_* methods
wrong_self_convention = "allow"
# Logic bug in bool expression - may be intentional
nonminimal_bool = "allow"
# Assertion always true - may be intentional
assertions_on_constants = "allow"
# Option ref
option_as_ref_deref = "allow"
# Filling slice
manual_memcpy = "allow"
# Excessive precision float
excessive_precision = "allow"
# Equality with false/true
bool_comparison = "allow"
# format with debug
use_debug = "allow"
# debug_assert
debug_assert_with_mut_call = "allow"
# Must use unused
must_use_unit = "allow"
# digit grouping
inconsistent_digit_grouping = "allow"
# item has both inner and outer attributes
mixed_attributes_style = "allow"
# match_like_matches_macro
match_like_matches_macro = "allow"
# Calling default
new_without_default = "allow"
# Contains instead of any
search_is_some = "allow"
# Iterator map + some
option_map_unit_fn = "allow"
# Sort on primitive
stable_sort_primitive = "allow"
# Calling to_string on &&str
useless_conversion = "allow"
# io::Error::other
io_other_error = "allow"
# inline always
inline_always = "allow"
# Debug format in format
dbg_macro = "allow"
# Unneeded return statement
needless_return = "allow"
# Option and_then some
option_map_or_none = "allow"
# Decimal for bit op
decimal_literal_representation = "allow"
# Option ref
ref_option = "allow"
# for_kv_map
for_kv_map = "allow"
# Remaining lint suppressions
bind_instead_of_map = "allow"
borrow_as_ptr = "allow"
collapsible_match = "allow"
decimal_bitwise_operands = "allow"
doc_lazy_continuation = "allow"
duplicated_attributes = "allow"
eq_op = "allow"
erasing_op = "allow"
explicit_auto_deref = "allow"
explicit_counter_loop = "allow"
identity_op = "allow"
implicit_saturating_sub = "allow"
inefficient_to_string = "allow"
inherent_to_string = "allow"
inherent_to_string_shadow_display = "allow"
iter_cloned_collect = "allow"
manual_contains = "allow"
manual_map = "allow"
manual_slice_fill = "allow"
manual_split_once = "allow"
manual_string_new = "allow"
missing_fields_in_debug = "allow"
needless_bool_assign = "allow"
needless_borrows_for_generic_args = "allow"
overly_complex_bool_expr = "allow"
range_plus_one = "allow"
result_unit_err = "allow"
same_item_push = "allow"
self_named_constructors = "allow"
self_only_used_in_recursion = "allow"
to_string_in_format_args = "allow"
unnecessary_debug_formatting = "allow"
unnecessary_get_then_check = "allow"
unnecessary_literal_unwrap = "allow"
unnecessary_to_owned = "allow"
unusual_byte_groupings = "allow"
while_let_on_iterator = "allow"
never_loop = "allow"

[workspace.dependencies]
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
criterion = { version = "0.8", features = ["html_reports"] }
crossbeam-channel = "0.5"
lru = "0.18"
notify = "8"
proptest = "1"
ratatui = "0.30"
sysinfo = "0.39"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
bytes = "1"
bitflags = { version = "2", features = ["serde"] }
tracing = "0.1"
nom = "8"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
ndarray = "0.17"
rayon = "1.12"
num_cpus = "1"
# flate2 replaced by oxiarc-deflate (COOLJAPAN Pure Rust Policy)
lz4_flex = "0.13"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.40"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10.1"
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
dashmap = "6.1"
parking_lot = "0.12"
uuid = { version = "1.23", features = ["v4", "serde", "js"] }
prometheus = "0.14"
cc = "1"
oxiarc-archive = "0.3.0"
oxiarc-deflate = "0.3.0"
oxiarc-lz4 = "0.3.0"
oxiarc-zstd = "0.3.0"

# AWS SDK (ring-based TLS; default-features = false avoids aws-lc-sys)
aws-config = { version = "1.8", default-features = false, features = ["rt-tokio", "credentials-process", "sso"] }
aws-sdk-s3 = { version = "1.132", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-medialive = { version = "1.135", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-cloudwatch = { version = "1.111", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-kms = { version = "1.106", default-features = false, features = ["rustls", "rt-tokio"] }
aws-smithy-runtime-api = "1.12"

# Azure SDK
azure_core = "1.0"
azure_storage = "0.21"
azure_storage_blobs = "0.21"

# Google Cloud
google-cloud-storage = "1.12"
scirs2-core = { version = "0.4.4", features = ["random", "linalg", "simd"] }
oxifft = "0.3.1"
oxionnx = "0.1.3"

# Network and HTTP
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "json", "form"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1"
http-body-util = "0.1"
mdns-sd = "0.19"

# TLS
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12"] }
rustls-rustcrypto = "0.0.2-alpha"
rustls-pemfile = "2"

# QUIC transport (feature-gated; ring crypto is C-backed, must stay optional)
quinn = { version = "0.11", features = ["rustls-ring"] }
rcgen = "0.14"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Crypto and hashing
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
rsa = { version = "0.9", features = ["sha2", "pem"] }
aes-gcm = "0.10"
aes = "0.9"
sha2 = "0.11"
sha1 = "0.11"
hmac = "0.13"
base64 = "0.22"
tempfile = "3.27"
libc = "0.2"
memmap2 = "0.9"
memchr = "2"
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }

# Misc
flv = "0.0.1"

# Workspace internal
oximedia-core = { version = "0.1.7", path ="crates/oximedia-core" }
oximedia-io = { version = "0.1.7", path ="crates/oximedia-io" }
oximedia-codec = { version = "0.1.7", path ="crates/oximedia-codec", default-features = false }
oximedia-container = { version = "0.1.7", path ="crates/oximedia-container" }
oximedia-audio = { version = "0.1.7", path ="crates/oximedia-audio" }
oximedia-audio-analysis = { version = "0.1.7", path ="crates/oximedia-audio-analysis" }
oximedia-audiopost = { version = "0.1.7", path ="crates/oximedia-audiopost" }
oximedia-effects = { version = "0.1.7", path ="crates/oximedia-effects" }
oximedia-vfx = { version = "0.1.7", path ="crates/oximedia-vfx" }
oximedia-graph = { version = "0.1.7", path ="crates/oximedia-graph" }
oximedia-cv = { version = "0.1.7", path ="crates/oximedia-cv" }
oximedia-net = { version = "0.1.7", path ="crates/oximedia-net" }
oximedia-ndi = { version = "0.1.7", path ="crates/oximedia-ndi" }
oximedia-accel = { version = "0.1.7", path ="crates/oximedia-accel" }
oximedia-edit = { version = "0.1.7", path ="crates/oximedia-edit" }
oximedia-gpu = { version = "0.1.7", path ="crates/oximedia-gpu" }
oximedia-subtitle = { version = "0.1.7", path ="crates/oximedia-subtitle" }
oximedia-captions = { version = "0.1.7", path ="crates/oximedia-captions" }
oximedia-packager = { version = "0.1.7", path ="crates/oximedia-packager" }
oximedia-jobs = { version = "0.1.7", path ="crates/oximedia-jobs" }
oximedia-server = { version = "0.1.7", path ="crates/oximedia-server" }
oximedia-qc = { version = "0.1.7", path ="crates/oximedia-qc" }
oximedia-auto = { version = "0.1.7", path ="crates/oximedia-auto" }
oximedia-drm = { version = "0.1.7", path ="crates/oximedia-drm" }
oximedia-dedup = { version = "0.1.7", path ="crates/oximedia-dedup" }
oximedia-archive = { version = "0.1.7", path ="crates/oximedia-archive" }
oximedia-archive-pro = { version = "0.1.7", path ="crates/oximedia-archive-pro" }
oximedia-timecode = { version = "0.1.7", path ="crates/oximedia-timecode" }
oximedia-timeline = { version = "0.1.7", path ="crates/oximedia-timeline" }
oximedia-timesync = { version = "0.1.7", path ="crates/oximedia-timesync" }
oximedia-storage = { version = "0.1.7", path ="crates/oximedia-storage" }
oximedia-distributed = { version = "0.1.7", path ="crates/oximedia-distributed" }
oximedia-farm = { version = "0.1.7", path ="crates/oximedia-farm" }
oximedia-collab = { version = "0.1.7", path ="crates/oximedia-collab" }
oximedia-simd = { version = "0.1.7", path ="crates/oximedia-simd" }
oximedia-mam = { version = "0.1.7", path ="crates/oximedia-mam" }
oximedia-forensics = { version = "0.1.7", path ="crates/oximedia-forensics" }
oximedia-playout = { version = "0.1.7", path ="crates/oximedia-playout" }
oximedia-scopes = { version = "0.1.7", path ="crates/oximedia-scopes" }
oximedia-dolbyvision = { version = "0.1.7", path ="crates/oximedia-dolbyvision" }
oximedia-bitstream = { version = "0.1.7", path = "crates/oximedia-bitstream" }
oximedia-mixer = { version = "0.1.7", path ="crates/oximedia-mixer" }
oximedia-aaf = { version = "0.1.7", path ="crates/oximedia-aaf" }
oximedia-image = { version = "0.1.7", path ="crates/oximedia-image" }
oximedia-metering = { version = "0.1.7", path ="crates/oximedia-metering" }
oximedia-monitor = { version = "0.1.7", path ="crates/oximedia-monitor" }
oximedia-stream = { version = "0.1.7", path ="crates/oximedia-stream" }
oximedia-normalize = { version = "0.1.7", path ="crates/oximedia-normalize" }
oximedia-restore = { version = "0.1.7", path ="crates/oximedia-restore" }
oximedia-mir = { version = "0.1.7", path ="crates/oximedia-mir" }
oximedia-imf = { version = "0.1.7", path ="crates/oximedia-imf" }
oximedia-edl = { version = "0.1.7", path ="crates/oximedia-edl" }
oximedia-align = { version = "0.1.7", path ="crates/oximedia-align" }
oximedia-bench = { version = "0.1.7", path ="crates/oximedia-bench" }
oximedia-metadata = { version = "0.1.7", path ="crates/oximedia-metadata" }
oximedia-lut = { version = "0.1.7", path ="crates/oximedia-lut" }
oximedia-watermark = { version = "0.1.7", path ="crates/oximedia-watermark" }
oximedia-quality = { version = "0.1.7", path ="crates/oximedia-quality" }
oximedia-analysis = { version = "0.1.7", path ="crates/oximedia-analysis" }
oximedia-switcher = { version = "0.1.7", path ="crates/oximedia-switcher" }
oximedia-transcode = { version = "0.1.7", path ="crates/oximedia-transcode" }
oximedia-denoise = { version = "0.1.7", path ="crates/oximedia-denoise" }
oximedia-multicam = { version = "0.1.7", path ="crates/oximedia-multicam" }
oximedia-scene = { version = "0.1.7", path ="crates/oximedia-scene" }
oximedia-stabilize = { version = "0.1.7", path ="crates/oximedia-stabilize" }
oximedia-optimize = { version = "0.1.7", path ="crates/oximedia-optimize" }
oximedia-calibrate = { version = "0.1.7", path ="crates/oximedia-calibrate" }
oximedia-search = { version = "0.1.7", path ="crates/oximedia-search" }
oximedia-proxy = { version = "0.1.7", path ="crates/oximedia-proxy" }
oximedia-playlist = { version = "0.1.7", path ="crates/oximedia-playlist" }
oximedia-clips = { version = "0.1.7", path ="crates/oximedia-clips" }
oximedia-routing = { version = "0.1.7", path ="crates/oximedia-routing" }
oximedia-automation = { version = "0.1.7", path ="crates/oximedia-automation" }
oximedia-presets = { version = "0.1.7", path ="crates/oximedia-presets" }
oximedia-shots = { version = "0.1.7", path ="crates/oximedia-shots" }
oximedia-access = { version = "0.1.7", path ="crates/oximedia-access" }
oximedia-convert = { version = "0.1.7", path ="crates/oximedia-convert" }
oximedia-rights = { version = "0.1.7", path ="crates/oximedia-rights" }
oximedia-virtual = { version = "0.1.7", path ="crates/oximedia-virtual" }
oximedia-gaming = { version = "0.1.7", path ="crates/oximedia-gaming" }
oximedia-profiler = { version = "0.1.7", path ="crates/oximedia-profiler" }
oximedia-recommend = { version = "0.1.7", path ="crates/oximedia-recommend" }
oximedia-repair = { version = "0.1.7", path ="crates/oximedia-repair" }
oximedia-review = { version = "0.1.7", path ="crates/oximedia-review" }
oximedia-scaling = { version = "0.1.7", path ="crates/oximedia-scaling" }
oximedia-workflow = { version = "0.1.7", path ="crates/oximedia-workflow" }
oximedia-graphics = { version = "0.1.7", path ="crates/oximedia-graphics" }
oximedia-cloud = { version = "0.1.7", path ="crates/oximedia-cloud" }
oximedia-conform = { version = "0.1.7", path ="crates/oximedia-conform" }
oximedia-videoip = { version = "0.1.7", path ="crates/oximedia-videoip" }
oximedia-video = { version = "0.1.7", path ="crates/oximedia-video" }
oximedia-colormgmt = { version = "0.1.7", path ="crates/oximedia-colormgmt" }
oximedia-batch = { version = "0.1.7", path ="crates/oximedia-batch" }
oximedia-renderfarm = { version = "0.1.7", path ="crates/oximedia-renderfarm" }
oximedia-neural = { version = "0.1.7", path ="crates/oximedia-neural" }
oximedia-compat-ffmpeg = { version = "0.1.7", path ="crates/oximedia-compat-ffmpeg" }
oximedia-compat-cv2 = { version = "0.1.7", path ="crates/oximedia-compat-cv2" }
oximedia-plugin = { version = "0.1.7", path ="crates/oximedia-plugin" }
oximedia-hdr = { version = "0.1.7", path ="crates/oximedia-hdr" }
oximedia-spatial = { version = "0.1.7", path ="crates/oximedia-spatial" }
oximedia-cache = { version = "0.1.7", path ="crates/oximedia-cache" }
oximedia-cdn = { version = "0.1.7", path ="crates/oximedia-cdn" }
oximedia-pipeline = { version = "0.1.7", path ="crates/oximedia-pipeline" }
oximedia-image-transform = { version = "0.1.7", path ="crates/oximedia-image-transform" }
oximedia-360 = { version = "0.1.7", path = "crates/oximedia-360" }
oximedia-analytics = { version = "0.1.7", path = "crates/oximedia-analytics" }
oximedia-caption-gen = { version = "0.1.7", path = "crates/oximedia-caption-gen" }
oximedia-ml = { version = "0.1.7", path = "crates/oximedia-ml" }
numpy = "0.28"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff"] }
serde_yaml_ng = "0.10"
toml = "1.1"

# Web framework (workspace-wide)
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tower = { version = "0.5", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }

# GPU compute
wgpu = "29.0"
bytemuck = { version = "1.25", features = ["derive"] }
pollster = "0.4"

# Scripting
mlua = { version = "0.11", features = ["lua54", "vendored", "async", "serialize"] }

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Search
tantivy = "0.26"

# Dynamic loading
libloading = "0.9"

# Python bindings
pyo3 = { version = "0.28", features = ["extension-module"] }

# COOLJAPAN serialization
oxicode = { version = "0.2.3", features = ["serde"] }

# Code generation (build-dep)
syn = { version = "2", features = ["full"] }

# xxhash (union of xxh64 + xxh3)
xxhash-rust = { version = "0.8", features = ["xxh64", "xxh3"] }

# GPU monitoring
nvml-wrapper = "0.12"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport"] }

# Authentication
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.6", features = ["getrandom"] }

# URL parsing
url = { version = "2.5", features = ["serde"] }

# Ordered collections
indexmap = { version = "2.14", features = ["serde"] }

# Image codecs (patent-free)
png = "0.18"
jpeg-decoder = "0.3"

# GraphQL and actix
actix-web = { version = "4", features = ["rustls-0_23"] }
async-graphql = { version = "7", features = ["uuid", "chrono"] }

# Google Cloud extras
google-cloud-wkt = "1"
google-cloud-auth = { version = "1.10", default-features = false }

# AWS SDK extras
aws-sdk-mediaconvert = { version = "1.126", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-mediapackage = { version = "1.98", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-sts = { version = "1.103", default-features = false, features = ["rustls", "rt-tokio"] }

# Encryption
cbc = "0.2"
block-padding = "0.4"

# Metal GPU (macOS/iOS only — optional)
metal = "0.33"
